<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PreferencesActivity">

    <RadioGroup
        android:id="@+id/radio_group_theme"
        android:layout_width="441dp"
        android:layout_height="115dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_choix_theme">

        <RadioButton
            android:id="@+id/radio_button_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/light_fr"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radio_button_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dark_fr"
            android:textSize="20sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/text_view_preferences_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/preferences_fr"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_choix_langue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/choix_langue_fr"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_preferences_title" />

    <TextView
        android:id="@+id/text_view_choix_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/choix_theme_fr"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group_langue" />

    <RadioGroup
        android:id="@+id/radio_group_langue"
        android:layout_width="441dp"
        android:layout_height="115dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_choix_langue">

        <RadioButton
            android:id="@+id/radio_button_fr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/francais_fr"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radio_button_en"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/anglais_fr"
            android:textSize="20sp" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>
