<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EnterPasswordFragment">

    <Button
        android:id="@+id/button_valider_password"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="700dp"
        android:text="@string/rejoindre_cette_partie_fr" />

    <Button
        android:id="@+id/button_annuler_password"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginStart="450dp"
        android:layout_marginTop="700dp"
        android:text="@string/annuler_fr" />

    <EditText
        android:id="@+id/edit_text_password_join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/mot_de_passe_fr"
        android:inputType="textPassword"
        android:textSize="30sp" />
</FrameLayout>
