<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UserProfileActivity">

    <TextView
        android:id="@+id/text_view_profil_utilisateur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/profil_utilisateur_fr"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_statistiques"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_marginTop="64dp"
        android:text="@string/statistiques_fr"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_profil_utilisateur" />

    <Button
        android:id="@+id/button_preferences"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:text="@string/preferences_fr"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_statistiques" />

    <Button
        android:id="@+id/button_profile_deco"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:text="@string/deconnecter_fr"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_modify_profile" />

    <TextView
        android:id="@+id/text_profile_connected_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:textSize="26sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_modify_profile"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:text="@string/modifier_profil_fr"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_preferences" />

</androidx.constraintlayout.widget.ConstraintLayout>
