<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000"
    tools:context=".activities.CardsFragment" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/titleExchangeFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="404dp"
            android:text="@string/selectione_fr"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyler_view_letter_holder_exchange"
            android:layout_width="549dp"
            android:layout_height="87dp"
            android:layout_marginTop="100dp"
            android:background="#B215294C"
            android:contentDescription="@string/app_name"
            android:nestedScrollingEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleExchangeFragment"
            tools:itemCount="7"
            tools:listitem="@layout/scrabble_tile_item" />

        <Button
            android:id="@+id/button_echanger_confirmer"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="100dp"
            android:text="@string/confirmer_fr"
            android:enabled="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyler_view_letter_holder_exchange" />

        <Button
            android:id="@+id/button_echanger_annuler"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="150dp"
            android:backgroundTint="@color/red"
            android:text="@string/annuler_fr"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyler_view_letter_holder_exchange" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
